[tool.poetry]
name = "file-clustering"
version = "0.1.0"
description = ""
authors = ["llay <lay.lyon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.62.0"
pdfplumber = "^0.11.5"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
